[package]
name = "bitcoin-organization-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }                                       # Command-line argument parsing
wild = "2.0"                                                                            # Expands wildcard arguments in command-line inputs
bip39 = "2.1.0"                                                                         # Mnemonic generation (external crate for bip39)
rand = "0.8"                                                                            # For random number generation
log = "0.4"                                                                             # Logging interface
hex = "0.4"                                                                             # Hexadecimal encoding and decoding utilities.
toml = "0.5"                                                                            # TOML file parsing and serialization.
env_logger = "0.10"                                                                     # Logging backend
lazy_static = "1.4"                                                                     # Provides globally available static data
serde = { version = "1.0", features = ["derive"] }                                      # For JSON serialization
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json","blocking"] }                          # For HTTP requests
dotenv = "0.15"                                                                         # To load .env files
bitcoin = "0.30"                                                                        # Bitcoin primitives (transactions, addresses, keys)
bitcoincore-rpc = "0.17"                                                                # Simplified RPC communication